Update CMakeLists.txt for app to use static libs for boost

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/bin)
 
 # -DBOOST_ROOT=usr/include/boost
 # -DINTERFACE_INCLUDE_DIR=~/Desktop/plugins/app/inc
+set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
